[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://FileDialog.gd" type="Script" id=3]

[node name="FileDialog" type="Control"]
margin_right = 582.0
margin_bottom = 436.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="URLHBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -291.0
margin_right = 292.0
margin_bottom = 23.0
custom_constants/separation = 2

[node name="UrlLabel" type="Label" parent="URLHBox"]
margin_top = 4.0
margin_right = 27.0
margin_bottom = 18.0
text = "URL "

[node name="BackUrlBtn" type="Button" parent="URLHBox"]
margin_left = 29.0
margin_right = 79.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
text = "Back"

[node name="UrlLineEdit" type="LineEdit" parent="URLHBox"]
margin_left = 81.0
margin_right = 531.0
margin_bottom = 23.0
rect_min_size = Vector2( 450, 0 )

[node name="UrlBtn" type="Button" parent="URLHBox"]
margin_left = 533.0
margin_right = 583.0
margin_bottom = 23.0
rect_min_size = Vector2( 50, 0 )
text = "Go"

[node name="ItemList" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0
margin_bottom = -28.0

[node name="BtnHbox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -23.0
margin_right = 77.0

[node name="OpenBtn" type="Button" parent="BtnHbox"]
margin_right = 75.0
margin_bottom = 23.0
rect_min_size = Vector2( 75, 23 )
text = "Open"

[node name="CancelBtn" type="Button" parent="BtnHbox"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 23.0
rect_min_size = Vector2( 75, 23 )
text = "Cancel"
